--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE_PREV ${CMAKE_POSITION_INDEPENDENT_CODE_PREV}
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 add_library(flay_grpc OBJECT ${P4RUNTIME_RT_PROTO})
-target_link_libraries(flay_grpc PUBLIC grpc++ PRIVATE controlplane PRIVATE flay_runtime)
+target_link_libraries(flay_grpc PUBLIC grpc++ PRIVATE controlplane PRIVATE flay_p4runtime)
 
 protobuf_generate(
   TARGET flay_grpc
