More work on a expression substitution pass for Flay.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ set(FLAY_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/core/simplify_expression.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/stepper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/substitute_placeholders.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/substitution_map.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/symbolic_executor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/table_executor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/target.cpp
