--- a/core/lib/CMakeLists.txt
+++ b/core/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(FLAY_LIB_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/analysis.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/collapse_dataplane_variables.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/expression_strength_reduction.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/simplify_expression.cpp
 )
 
