--- a/core/specialization/CMakeLists.txt
+++ b/core/specialization/CMakeLists.txt
@@ -8,8 +8,8 @@ set(FLAY_SPECIALIZATION_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/service_wrapper_bfruntime.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/service_wrapper_p4runtime.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/substitution_map.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/z3_substitution_map.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/z3solver_reachability.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/z3/substitution_map.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/z3/reachability_map.cpp
 )
 
 add_library(flay-specialization STATIC ${FLAY_SPECIALIZATION_SOURCES})
