--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -44,6 +44,7 @@ jobs:
 
       - name: Build (Ubuntu 22.04)
         run: |
+          sudo apt-get install -y libgmp-dev libelf-dev zlib1g-dev libjansson-dev
           ENABLE_WERROR=OFF tools/ci-build.sh
         working-directory: ../p4c
 
